--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "cssnano": "^4.1.10",
     "html-minifier": "^4.0.0",
     "luxon": "^1.21.2",
+    "markdown-it-for-inline": "^2.0.1",
+    "markdown-it-link-attributes": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "tailwindcss": "^1.1.4"
